--- a/style.css
+++ b/style.css
@@ -32,15 +32,20 @@ nav{
      color: #0065FC;
  }
  
-<<<<<<< HEAD
-=======
- .lien_inscrire{
-     color: #0065FC;
-     font-weight: bold;
- }
- 
- .lien_inscrire:hover{
-    border-top: none;
+ .recherche{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin: 0 4% 0 4%;
+
 }
-test
->>>>>>> cb8c43da92b0087dd7a31586589ec19b4b1c9ce7
+.recherche h1{
+    font-weight:900;
+    font-size: 150%;
+    margin-bottom: 0;
+}
+.recherche p{
+    font-size: 100%;
+    font-weight: 500;
+    margin-top: 5px;
+}
