--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding-top: 2%;
-    margin: 0 3.5% 0 3.5%;
+    margin: 0 4% 0 4%;
+    font-size: 110%;
 }
 
 body {
@@ -32,6 +33,7 @@ nav{
      color: #0065FC;
  }
 
+ /*texte trouvez votre herbergement*/
  .recherche{
     display: flex;
     flex-direction: column;
@@ -50,15 +52,19 @@ nav{
     margin-top: 5px;
 }
 
-.map{
-    font-size: 1.1em;
-    width: 50px;
+/*barre de recherche*/
+form {
+    margin: 1px 0 1px 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #F2F2F2;
+    justify-content: flex-start;
+}
+
+.map{
+    padding: 15px;
+    background-color: #f2f2f2;
     border-radius: 10px 0 0 10px;
-    background-color: #F2F2F2;
+    color: #000000;
+
 }
 
 input{
@@ -66,17 +72,17 @@ input{
     width: 20%;
     padding: 0 0 0 1%;
     margin: 0;
-    border: 1px solid rgb(236, 236, 236);
+    border: 1px solid #F2F2F2;
     font-size: 100%;
     font-family: 'Raleway', sans-serif;
 }
 input::placeholder{
     color: #0e0e0e;
     font-weight: 600;
-    font-size: 120%;
+    font-size: 15px;
 }
 button{
-    font-size: 120%;
+    font-size: 15px;
     font-weight: 900;
     height: 40px;
     width: 130px;
@@ -91,4 +97,48 @@ button{
 button:hover{
     width: 135px;
     height: 45px;
+}
+
+/*filtres*/
+
+.filtres{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 100px;
+    width: 150%;
+}
+.filtres span{
+    font-weight: 800;
+    font-size: 15px;
+    display: block;
+}
+.filtres div{
+    border: 2px solid #F2F2F2;
+    border-radius: 25px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 20px;
+}
+
+.filtres div span{
+    font-weight: 900;
+    font-size: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.icon{
+    height: 50px;
+    width: 50px;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    border-radius: 50px;
+    color: #0065FC;
+    background-color: #DEEBFF;
 }
