--- a/style.css
+++ b/style.css
@@ -206,12 +206,6 @@ button:hover{
     width: fit-content;
 }
 
-
-.hebergement p:hover{
-    width: fit-content;
-    border-bottom: 2px solid black;
-}
-
 .hebergement section{
     display: flex;
     flex-direction: column;
@@ -257,4 +251,24 @@ button:hover{
     margin: 10px 0 5px 15px;
 }
 
+
+/*herbergement etoiles et description */
+.bleu{
+    color: #0065FC;
+}
+.grise{
+    color: #F2F2F2;
+}
+
+.description{
+    margin: 0 0 0 15px;
+    font-size: 11px;
+    font-weight: 500;
+}
+.etoiles{
+    margin: 7px 0 0 15px;
+    font-size: 10px;
+    display: flex;
+    justify-content: flex-start;
+}
 
