finition des cartes hebergements et les plus populaires

--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ button{
 
 .hebergement h2{
     font-size: 15px;
-    margin: 0 0 25px 0;
+    margin: 10px 0 25px 0;
     width: fit-content;
 }
 
@@ -206,7 +206,8 @@ button{
     display: flex;
     flex-direction: column;
     width: 60%;
-    padding: 35px;
+    padding: 20px;
+    padding-top: 10px;
     background-color: #F2F2F2;
     border-radius: 15px;
 }
@@ -273,43 +274,50 @@ button{
 /*debut du aside pour la partie de droite les plus populaires*/
 
 aside{
-    width: 30%;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
     background-color: #F2F2F2;
+    width: 30%;
+    padding: 20px;
+    padding-top: 10px;
 }
 
+aside div h2 {
+    font-size: 15px;
+    margin: 0px 0 25px 0;
+    width: fit-content;
+}
+
+
 .lespopulaires{
-    display: inline-block;
-    display: flex;
-    justify-content: space-between;
-    margin: 30px 4% 0 4%;
+    flex-direction: row;
+    align-items: center;
     font-family: 'Raleway', sans-serif;
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    width: 80%;
 }
 
 aside div{
-    height: 500px;
-    padding: 4px 30px 4px 30px;
-    display: flex;
-    flex-direction: column;
     justify-content: space-between;
     width: fit-content;
 }
 
 aside div article div{
     padding-left: 20px;
-    padding-top: 10px;
-    height: auto;
+    padding-top: 3px;
     font-family: 'Raleway', sans-serif;
 }
 
 aside div article{
-    height: 140px;
-    width: fit-content;
+    height: 126px;
     display: flex;
     border-radius: 15px;
     padding: 4px;
+    padding-right: 10px;
+    margin: 11px;
     border: 1px solid white;
     background-color: white;
     box-shadow: 0 0 10px 0 rgb(0 0 0 / 30%);
@@ -318,7 +326,7 @@ aside div article{
 aside div article img{
     width: 45%;
     min-width: 45%;
-    height: 140px;
+    height: 126px;
     border-radius: 10px 0 0 10px;
 }
 
@@ -340,13 +348,14 @@ aside div article span{
 .fa-chart-line{
     font-size: 20px;
     display: inline-block;
+    justify-content: space-between;
 }
 
 .etoiles_pop{
     display: flex;
     justify-content: flex-start;
     font-size: 10px;
-    padding: 40px 0 2px 0;
+    padding: 45px 0 2px 0;
     box-sizing: border-box;
 }
 
@@ -354,6 +363,6 @@ aside div article span{
     display: flex;
     justify-content: flex-start;
     font-size: 10px;
-    padding: 20px 0 2px 0;
+    padding: 27px 0 2px 0;
     box-sizing: border-box;
 }
