--- a/style.css
+++ b/style.css
@@ -14,27 +14,29 @@ body {
     max-width: 2000px;
     width: auto;
     margin: 0 auto;
-    font-size: 0.80em;
-  }
+    font-size: 13px;
+}
 
 nav{
     margin-top: 15px;
     position: relative;
- }
- header nav a {
+}
+
+header nav a {
      text-decoration: none;
      color: black;
-     padding: 2em;
+     padding: 30px;
      
- }
- nav a:hover{
+}
+
+nav a:hover{
      border-top: 3px solid #0065FC;
      padding-top: 40px;
      color: #0065FC;
  }
 
  /*texte trouvez votre herbergement*/
- .recherche{
+.recherche{
     display: flex;
     flex-direction: column;
     position: relative;
@@ -523,6 +525,7 @@ footer section p{
 
     header {
         display: block;
+        width: 375px;
     }
 
     header nav {
@@ -540,18 +543,20 @@ footer section p{
     }
     
     header nav a:hover {
-        border-bottom: 3px solid #0065FC;
-        border-top: unset;
-        padding-top: none;
+        border-bottom: 2px solid #0065FC;
+        border-top: none;
+        padding-top: 0;
     }
 
     body{
         margin: 4px;
+        width: 160px;
     }
 
     .recherche p {
         font-size: 15px;
         font-weight: 300;
+        width: 350px;
     }
 
     .recherche {
@@ -561,6 +566,7 @@ footer section p{
 
     .recherche h1{
         margin-top: 20px;
+        width: 351px;
     }
 
     button{
@@ -622,6 +628,7 @@ footer section p{
 
     .information {
         margin-top: 23px;
+        width: 351px;
     }
 
     .rond {
@@ -632,7 +639,10 @@ footer section p{
     }
 
     aside{
-        display: block;
+        padding: 114px;
+        padding-top: 10px;
+        margin-top: 10px;
+        flex-direction: column;
     }
 
     .aside div {
@@ -642,13 +652,22 @@ footer section p{
     }
 
     .hebergement{
-        display: block;
-        margin: -11px -175px 46px -10px;
+        display: flex;
+        flex-direction: column-reverse;
+        margin: 0px;
     }
 
     .hebergement section{
         padding: 30px;
         background-color: white;
+        flex-flow: column;
+        flex-direction: column;
+        height: 1374px;
+        width: 331px;
+    }
+
+    .hebergement aside {
+        width: 100%;
     }
 
     .hebergement section .cartes div{
@@ -666,7 +685,6 @@ footer section p{
 
     .hebergement section .cartes div article{
         width: auto;
-        padding: none;
         border: none;
         height: 200px;
         box-shadow: 0 0 8px 0 rgb(0 0 0 / 20%);
@@ -694,21 +712,26 @@ footer section p{
     }
 
     .activites{
-        height: 1360px;
-        margin: 336px -310px 0 23px;
+        height: 593px;
     }
 
     .activites article img {
         border-radius: 10px 10px 0 0;
         height: 149px;
-    
     }
 
     .cartesactivites{
-        height: 1275px;
         flex-direction: column;
         display: inline-block;
         justify-content: space-between;
+    }
+
+    .zoneun {
+        height: 346px;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 748px;
+        margin-left: 10px;
     }
 
     .cartevieuxport{
@@ -722,5 +745,19 @@ footer section p{
     .cartevieuxport img, .cartefort img, .carteiles img, .cartedame img, .carteparc img{
         height: 74%;
     }
+
+    button span{
+        display: none;
+    }
+
+    footer{
+        display: flex;
+        flex-direction: column;
+    }
+
+    footer section{
+        width: 80%;
+    }
+
 
 }
