--- a/style.css
+++ b/style.css
@@ -10,9 +10,6 @@ header {
 
 body {
     font-family: 'Raleway', sans-serif;
-    color: #000000;
-    max-width: 2000px;
-    width: auto;
     margin: 0 auto;
     font-size: 13px;
 }
@@ -268,7 +265,7 @@ button{
 }
 
 
-/*herbergement etoiles et description */
+/*hebergement etoiles et description */
 .bleu{
     color: #0065FC;
 }
@@ -496,11 +493,11 @@ aside div article span{
 
 /* footer */
 footer{
-    width: 1480px;
+    width: 1300px;
     margin: auto;
     display: flex;
     justify-content: space-between;
-    padding: 18px 3.8% 0 3.8%;
+    padding: 19px 673px 4px 45px;
     background-color: #F2F2F2;
 }
 footer section{
@@ -667,7 +664,9 @@ footer section p{
     }
 
     .hebergement aside {
-        width: 100%;
+        width: 300px;
+        margin-left: -70px;
+        height: 415px;
     }
 
     .hebergement section .cartes div{
@@ -688,6 +687,15 @@ footer section p{
         border: none;
         height: 200px;
         box-shadow: 0 0 8px 0 rgb(0 0 0 / 20%);
+        margin-top: 21px;
+    }
+
+    .hebergement a {
+        margin-bottom: -28px;
+    }
+
+    .etoiles_pop {
+        padding: 45px 0 2px 0;
     }
 
     .cartes article img {
@@ -713,6 +721,9 @@ footer section p{
 
     .activites{
         height: 593px;
+        margin: -73px 9px 36px 27px;
+        padding: 0;
+        width: 331px;
     }
 
     .activites article img {
@@ -730,8 +741,9 @@ footer section p{
         height: 346px;
         flex-direction: column;
         justify-content: space-between;
-        width: 748px;
+        width: 715px;
         margin-left: 10px;
+        margin-bottom: 243px;
     }
 
     .cartevieuxport{
@@ -753,6 +765,7 @@ footer section p{
     footer{
         display: flex;
         flex-direction: column;
+        padding-top: 100px;
     }
 
     footer section{
