--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ aside{
     margin-top: 10px;
 }
 
-aside div h2 {
+aside div h2{
     font-size: 15px;
     margin: 0px 0 25px 0;
     width: fit-content;
@@ -497,7 +497,7 @@ footer{
     margin: auto;*/
     display: flex;
     justify-content: space-between;
-    padding: 19px 48px 4px 45px;
+    padding: 19px 48px 15px 45px;
     background-color: #F2F2F2;
 }
 footer section{
@@ -644,16 +644,25 @@ footer section p{
         flex-direction: column;
     }
 
-    .aside div {
+    aside div {
         display: block;
         justify-content: space-between;
         flex-direction: column;
+        width: 333px;
     }
 
     .hebergement{
         display: flex;
         flex-direction: column-reverse;
         margin: 0px;
+    }
+
+    .hebergement p{
+        font-size: 15px;
+        font-weight: 900;
+        margin-bottom: 1px;
+        width: fit-content;
+        margin-left: 2px;
     }
 
     .hebergement section{
@@ -666,8 +675,8 @@ footer section p{
     }
 
     .hebergement aside {
-        width: 300px;
-        margin-left: -70px;
+        width: 164px;
+        margin-left: -4px;
         height: 415px;
     }
 
@@ -703,7 +712,8 @@ footer section p{
     .cartes article img {
         height: 119px;
         width: 100%;
-        border-radius: 10px 10px 0 0;
+        margin: 0;
+        border-radius: 12px 12px 0 0;
     }
 
     .cartes img {
@@ -737,23 +747,32 @@ footer section p{
         flex-direction: column;
         display: inline-block;
         justify-content: space-between;
+        width: 100%;
     }
 
-    .zoneun {
-        height: 346px;
+    .zoneun, .zonedeux {
+        height: 405px;
         flex-direction: column;
         justify-content: space-between;
-        width: 715px;
+        width: 100%;
         margin-left: 10px;
         margin-bottom: 243px;
     }
 
     .cartevieuxport{
-        height: 150px;
+        height: 207px;
+        width: 319px;
+        margin-bottom: 20px;
     }
 
     .petitescartes{
-        height: 150px;
+        height: 207px;
+        width: 319px;
+    }
+
+    .cartedame, .cartefort, .carteiles, .carteparc{
+        margin-bottom: 25px;
+        height: 226px;
     }
 
     .cartevieuxport img, .cartefort img, .carteiles img, .cartedame img, .carteparc img{
@@ -767,7 +786,10 @@ footer section p{
     footer{
         display: flex;
         flex-direction: column;
-        padding-top: 100px;
+        padding-top: 0px;
+        padding-left: 10px;
+        width: 333px;
+        margin-top: 480%;
     }
 
     footer section{
